syntax = "proto3";

import "google/api/annotations.proto";
import "google/protobuf/wrappers.proto";

import "media.proto";

option csharp_namespace = "Mastodon.Grpc";

service MediaApi {    

  rpc GetMedia (google.protobuf.StringValue) returns (MediaAttachment)
  {
	option (google.api.http) = {
      get: "/api/v1/media/{value}"
    };
  }
}
